cs2303/assignment1/compiling_error.txt
/home/jemushatt/SystemsProgramming/cs2303/assignment1/PA1.c: In function ‘main’:
/home/jemushatt/SystemsProgramming/cs2303/assignment1/PA1.c:8:3: warning: implicit declaration of function ‘printCalendar’ [-Wimplicit-function-declaration]
   printCalendar(year,calculateDay(year))
   ^~~~~~~~~~~~~
/home/jemushatt/SystemsProgramming/cs2303/assignment1/PA1.c:8:22: warning: implicit declaration of function ‘calculateDay’ [-Wimplicit-function-declaration]
   printCalendar(year,calculateDay(year))
                      ^~~~~~~~~~~~
/home/jemushatt/SystemsProgramming/cs2303/assignment1/PA1.c:9:3: error: expected ‘;’ before ‘return’
   return 0;
   ^~~~~~
/home/jemushatt/SystemsProgramming/cs2303/assignment1/PA1.c: At top level:
/home/jemushatt/SystemsProgramming/cs2303/assignment1/PA1.c:15:6: warning: conflicting types for ‘printCalendar’
 void printCalendar(int year, int day) {
      ^~~~~~~~~~~~~
/home/jemushatt/SystemsProgramming/cs2303/assignment1/PA1.c:8:3: note: previous implicit declaration of ‘printCalendar’ was here
   printCalendar(year,calculateDay(year))
   ^~~~~~~~~~~~~
/home/jemushatt/SystemsProgramming/cs2303/assignment1/PA1.c: In function ‘isLeapYear’:
/home/jemushatt/SystemsProgramming/cs2303/assignment1/PA1.c:25:17: error: lvalue required as left operand of assignment
   if(((year % 4 = 0) && (year%100!=0)) || ((year%400)==0)) {
                 ^
